@@ -5,6 +5,8 @@
 	* meta/builders/AutoProtoClassBuilder.class.php,
 	meta/classes/MetaClassProperty.class.php: ValueObject supports inheritance now.
 
+	* meta/classes/MetaConfiguration.class.php: fixed check recursion for lazy objects.
+
 2009-10-19	Denis M. Gabaidulin
 
 	* core/Cache/DebugCachePeer.class.php: cache peer for debugging
